
- Bug #532646: The object set to the __call__ attribute has its own __call__
  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode


Extension Modules
-----------------

- Bug #1551427: fix a wrong NULL pointer check in the win32 version
  of os.urandom().

- Patch #1535500: fix segfault in BZ2File.writelines and make sure it
  raises the correct exceptions.

- Bug #1471938: Fix curses module build problem on Solaris 8; patch by
  Paul Eggert.

- Bug #1512695: cPickle.loads could crash if it was interrupted with
  a KeyboardInterrupt.

- Change binascii.hexlify() to accept any read-only buffer and not just a char
  buffer.

- Fixed a potentially invalid memory access of CJKCodecs' shift-jis decoder.

- Calling Tk_Init twice is refused if the first call failed as that
  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.

- Bug #1467952: os.listdir() now correctly raises an error if readdir()
  fails with an error condition.

- Fix bsddb.db.DBError derived exceptions so they can be unpickled.

- Bug #1117761: bsddb.*open() no longer raises an exception when using
  the cachesize parameter.

- Bug #1493322: bsddb: the __len__ method of a DB object has been fixed to
  return correct results.  It could previously incorrectly return 0 in some
  cases.  Fixes SF bug 1493322 (pybsddb bug 1184012).

- pybsddb Bug #1527939: bsddb module DBEnv dbremove and dbrename
  methods now allow their database parameter to be None as the
  sleepycat API allows.


Library
-------

- Fix missing import of the types module in logging.config.

- Bug #1112549, DoS attack on cgi.FieldStorage.

- Bug #1257728: Complain about missing VS 2003 in the error message
  of msvccompiler, and mention Cygwin as an alternative.
